--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
@@ -13,14 +13,18 @@
     <add key="DATABASE" value="CDRAnalysisMobile" />
     <add key="UID" value="zain" />
     <add key="PASSWORD" value="zain123" />
-    
-    
     <add key="FTP_Username" value="root" />
     <add key="FTP_Pasword" value="P@ssw0rd" />
-    
     <add key="FTP_Path" value="/var/mysql/5.5/data"/>
 
 
+    <!--<add key="SERVER" value="10.50.25.172" />
+    <add key="DATABASE" value="Zain" />
+    <add key="UID" value="vanrise" />
+    <add key="PASSWORD" value="v@nrise" />
+    <add key="FTP_Username" value="mysql" />
+    <add key="FTP_Pasword" value="mysql_123" />
+    <add key="FTP_Path" value="/MySQL/data"/>-->
 
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
