datagrid directive and enhancing ZoneMonitor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22341

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
@@ -52,6 +52,7 @@
     <Compile Include="PricingGeneratorManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateManager.cs" />
+    <Compile Include="SwitchManager.cs" />
     <Compile Include="ZoneManager.cs" />
   </ItemGroup>
   <ItemGroup>
