--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CommissionDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateDataManager.cs" />
+    <Compile Include="SwitchDataManager.cs" />
     <Compile Include="TariffDataManager.cs" />
     <Compile Include="ToDConsiderationDataManager.cs" />
     <Compile Include="ZoneDataManager.cs" />
