--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -25,11 +25,14 @@
   </system.web>
   <connectionStrings>
     <!--<add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=zain;Password=zain123;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />-->
+      providerName="System.Data.SqlClient" />
     <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
-      providerName="System.Data.EntityClient" />
+      providerName="System.Data.EntityClient" />-->
+
     <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"
       providerName="MySql.Data.MySqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
+     providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
