--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,9 +24,9 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <!--<add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=zain;Password=zain123;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
+    <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
+       providerName="System.Data.SqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.240;user id=sa;password=iraq@cce$$1;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
       providerName="System.Data.EntityClient" />-->
 
     <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"
@@ -57,5 +57,16 @@
       <remove name="Telerik_Web_UI_WebResource_axd"/>
       <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" />
     </handlers>
+    <defaultDocument>
+      <files>
+        <remove value="default.aspx" />
+        <remove value="iisstart.htm" />
+        <remove value="index.html" />
+        <remove value="index.htm" />
+        <remove value="Default.asp" />
+        <remove value="Default.htm" />
+        <add value="Login.aspx" />
+      </files>
+    </defaultDocument>
   </system.webServer>
 </configuration>
