--- a/FZero/Vanrise.Fzero.CDRImport.Business/Vanrise.Fzero.CDRImport.Business.csproj
+++ b/FZero/Vanrise.Fzero.CDRImport.Business/Vanrise.Fzero.CDRImport.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FEB021A1-D6A3-4AC9-BCCD-A56DAEA69983}</ProjectGuid>
+    <ProjectGuid>{A4B118BE-DED8-429C-9EF8-EAB394085DFF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dependencies</RootNamespace>
-    <AssemblyName>Dependencies</AssemblyName>
+    <RootNamespace>Vanrise.Fzero.CDRImport.Business</RootNamespace>
+    <AssemblyName>Vanrise.Fzero.CDRImport.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -41,38 +41,29 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Queueing">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Queueing.Entities">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDRQueueFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libraries\Microsoft.Practices.EnterpriseLibrary.Common.dll" />
-    <Content Include="Libraries\Microsoft.Practices.EnterpriseLibrary.Data.dll" />
-    <Content Include="Libraries\Microsoft.Practices.ServiceLocation.dll" />
-    <Content Include="Libraries\Microsoft.Practices.Unity.dll" />
-    <Content Include="Libraries\Microsoft.Practices.Unity.Interception.dll" />
-    <Content Include="Libraries\Newtonsoft.Json.dll" />
-    <Content Include="Libraries\protobuf-net.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.Client.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.Data.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.Data.SQL.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.Entities.dll" />
-    <Content Include="VanriseFramework\Vanrise.BusinessProcess.WFActivities.dll" />
-    <Content Include="VanriseFramework\Vanrise.Caching.dll" />
-    <Content Include="VanriseFramework\Vanrise.Common.dll" />
-    <Content Include="VanriseFramework\Vanrise.Data.dll" />
-    <Content Include="VanriseFramework\Vanrise.Data.SQL.dll" />
-    <Content Include="VanriseFramework\Vanrise.Logging.SQL.dll" />
-    <Content Include="VanriseFramework\Vanrise.Queueing.Data.dll" />
-    <Content Include="VanriseFramework\Vanrise.Queueing.Data.SQL.dll" />
-    <Content Include="VanriseFramework\Vanrise.Queueing.dll" />
-    <Content Include="VanriseFramework\Vanrise.Queueing.Entities.dll" />
-    <Content Include="VanriseFramework\Vanrise.Queueing.Extensions.dll" />
-    <Content Include="VanriseFramework\Vanrise.Runtime.Data.dll" />
-    <Content Include="VanriseFramework\Vanrise.Runtime.Data.SQL.dll" />
-    <Content Include="VanriseFramework\Vanrise.Runtime.dll" />
-    <Content Include="VanriseFramework\Vanrise.Runtime.Entities.dll" />
+    <ProjectReference Include="..\Vanrise.Fzero.CDRImport.Data\Vanrise.Fzero.CDRImport.Data.csproj">
+      <Project>{73e469c6-3ccb-4414-8ef1-3ea3600f1eba}</Project>
+      <Name>Vanrise.Fzero.CDRImport.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Fzero.CDRImport.Entities\Vanrise.Fzero.CDRImport.Entities.csproj">
+      <Project>{8ea7f723-709a-480a-9ecf-be40c336a0cb}</Project>
+      <Name>Vanrise.Fzero.CDRImport.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
