--- a/FZero/Vanrise.Fzero.DevRuntime/App.config
+++ b/FZero/Vanrise.Fzero.DevRuntime/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="vanriseLogging" type="Vanrise.Common.LoggingConfiguration.LoggingConfig, Vanrise.Common" />
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -14,5 +17,22 @@
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueItemDBConnStringKey" value="QueueDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
+
+    <add key="AddBusinessProcessConsoleTracking" value="true"/>
   </appSettings>
+
+  <vanriseLogging maxLogLevel="Information">
+    <loggers>
+      <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
+        <parameters>
+          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+        </parameters>
+      </logger>
+      <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
+    </loggers>
+    <exceptionLoggers>
+      <exceptionLogger name="ConsoleExceptionLogger"  type="Vanrise.Common.ConsoleExceptionLogger, Vanrise.Common"></exceptionLogger>
+    </exceptionLoggers>
+  </vanriseLogging>
+  
 </configuration>
