--- a/FZero/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/FZero/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
+    <Compile Include="Tasks\MustaphaTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
