git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22475

--- a/FZero/Vanrise.Fzero.Services.WcfServiceLibrary/Vanrise.Fzero.Services.WcfServiceLibrary.csproj
+++ b/FZero/Vanrise.Fzero.Services.WcfServiceLibrary/Vanrise.Fzero.Services.WcfServiceLibrary.csproj
@@ -69,13 +69,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Debug\EntityFramework.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.Bypass\Vanrise.Fzero.Bypass.csproj">
       <Project>{1ca1b8a4-c6ac-499d-a763-8276a68c415e}</Project>
       <Name>Vanrise.Fzero.Bypass</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
