--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Queueing">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.dll</HintPath>
     </Reference>
