--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Entities/Vanrise.Fzero.CDRImport.Entities.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDR.cs" />
     <Compile Include="ImportedCDRBatch.cs" />
     <Compile Include="ParsedCDRBatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
