--- a/CDRAnalysis/Dependencies/Dependencies.csproj
+++ b/CDRAnalysis/Dependencies/Dependencies.csproj
@@ -53,8 +53,25 @@
     <Content Include="Libraries\Microsoft.Practices.ServiceLocation.dll" />
     <Content Include="Libraries\Microsoft.Practices.Unity.dll" />
     <Content Include="Libraries\Microsoft.Practices.Unity.Interception.dll" />
+    <Content Include="Libraries\MySql.Data.dll" />
+    <Content Include="Libraries\MySql.Data.Entity.EF5.dll" />
+    <Content Include="Libraries\MySql.Data.Entity.EF6.dll" />
+    <Content Include="Libraries\MySql.Fabric.Plugin.dll" />
+    <Content Include="Libraries\MySql.Web.dll" />
     <Content Include="Libraries\Newtonsoft.Json.dll" />
     <Content Include="Libraries\protobuf-net.dll" />
+    <Content Include="Libraries\Rebex.Net.Ftp.dll" />
+    <Content Include="Libraries\Rebex.Net.ProxySocket.dll" />
+    <Content Include="Libraries\Rebex.Net.ProxySocket.xml" />
+    <Content Include="Libraries\Rebex.Net.SecureSocket.dll" />
+    <Content Include="Libraries\Rebex.Net.Sftp.dll" />
+    <Content Include="Libraries\Rebex.Net.Ssh.dll" />
+    <Content Include="Libraries\Rebex.Net.SshShell.dll" />
+    <Content Include="Libraries\Rebex.Net.Telnet.dll" />
+    <Content Include="Libraries\Rebex.Net.Telnet.xml" />
+    <Content Include="Libraries\Rebex.Security.dll" />
+    <Content Include="Libraries\Rebex.TerminalEmulation.dll" />
+    <Content Include="Libraries\Rebex.TerminalEmulation.xml" />
     <Content Include="Libraries\Telerik.Web.UI.dll" />
     <Content Include="Libraries\Telerik.Web.UI.xml" />
     <Content Include="Libraries\Vanrise.CommonLibrary.dll" />
