--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="ImportCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveCDRsToDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.CDRImport.BP.Arguments\Vanrise.Fzero.CDRImport.BP.Arguments.csproj">
