--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Arguments/Vanrise.Fzero.CDRImport.BP.Arguments.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Arguments/Vanrise.Fzero.CDRImport.BP.Arguments.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CDRImportProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveCDRToDBProcessInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
