--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/Vanrise.Fzero.CDRImport.BP.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/Vanrise.Fzero.CDRImport.BP.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="CDRImportProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveCDRToDBProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.CDRImport.BP.Activities\Vanrise.Fzero.CDRImport.BP.Activities.csproj">
@@ -81,6 +82,12 @@
   </ItemGroup>
   <ItemGroup>
     <XamlAppDef Include="CDRImportProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="SaveCDRToDBProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </XamlAppDef>
