--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -10,6 +10,7 @@
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroTransaction;Data Source=."/>
     <add name="QueueDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroQueue;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
+    <add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
   </connectionStrings>
   <appSettings>
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
