--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -10,7 +10,8 @@
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroTransaction;Data Source=."/>
     <add name="QueueDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroQueue;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
-    <add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
+    <!--<add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=CDRAnalysisMobile;Data Source=192.168.110.240;User ID=sa;Password=iraq@cce$$1"/>-->
+    <add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestDB;Data Source=."/>
   </connectionStrings>
   <appSettings>
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
@@ -18,7 +19,6 @@
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueItemDBConnStringKey" value="QueueDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
-
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
   </appSettings>
 
