--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -550,6 +550,7 @@
     <Content Include="Client\Templates\Directives\vr-textbox-button.html" />
     <Content Include="Client\Templates\Directives\vr-textbox-icon.html" />
     <Content Include="Client\Templates\Directives\vr-textbox-standard.html" />
+    <Content Include="Client\Templates\Grid\CellAction.html" />
     <Content Include="Client\Templates\Grid\CellTemplate.html" />
     <Content Include="Client\Templates\Grid\ClickableCellTemplate.html" />
     <Content Include="Client\Templates\Grid\ExpandableRowGridTemplate.html" />
