--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -146,6 +146,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\HadiTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
     <Compile Include="Tasks\MustaphaTask.cs" />
   </ItemGroup>
