--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\HadiTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
+    <Compile Include="Tasks\WalidTask.cs" />
     <Compile Include="Tasks\MustaphaTask.cs" />
   </ItemGroup>
   <ItemGroup>
