git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22522

--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -11,7 +11,9 @@
     <add name="QueueDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroQueue;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
     <!--<add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=CDRAnalysisMobile_WF;Data Source=192.168.110.240;User ID=sa;Password=iraq@cce$$1"/>-->
-    <add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestDB;Data Source=."/>
+    <add name="CDRDBConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile_WF;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
+       providerName="System.Data.SqlClient" />
+    <!--<add name="CDRDBConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestDB;Data Source=."/>-->
   </connectionStrings>
   <appSettings>
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
