--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.DurableInstancing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activities" />
@@ -80,6 +81,9 @@
     <Reference Include="Vanrise.BusinessProcess.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.Entities.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Caching">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Caching.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Queueing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
