--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.MYSQL/Vanrise.Fzero.CDRImport.Data.MYSQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.MYSQL/Vanrise.Fzero.CDRImport.Data.MYSQL.csproj
@@ -41,9 +41,23 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Data">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDRDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Fzero.CDRImport.Data\Vanrise.Fzero.CDRImport.Data.csproj">
+      <Project>{73e469c6-3ccb-4414-8ef1-3ea3600f1eba}</Project>
+      <Name>Vanrise.Fzero.CDRImport.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Fzero.CDRImport.Entities\Vanrise.Fzero.CDRImport.Entities.csproj">
+      <Project>{8ea7f723-709a-480a-9ecf-be40c336a0cb}</Project>
+      <Name>Vanrise.Fzero.CDRImport.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
