git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22568

--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP.Activities/Vanrise.Fzero.CDRImport.BP.Activities.csproj
@@ -66,6 +66,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Activities" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.DurableInstancing" />
@@ -108,6 +109,11 @@
       <Project>{8ea7f723-709a-480a-9ecf-be40c336a0cb}</Project>
       <Name>Vanrise.Fzero.CDRImport.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
