git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22574

--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.SQL/Vanrise.Fzero.CDRImport.Data.SQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.SQL/Vanrise.Fzero.CDRImport.Data.SQL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDRDataManager.cs" />
+    <Compile Include="CDRDataManager_Walid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
